--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,10 @@ jwt.secret=javainuse
 # ===============================
 # Set here configurations for the database connection
 # spring.datasource.url=jdbc:mariadb://132.17.10.100:3306/TTV_DB?useSSL=false
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/reclamosumg?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+# spring.datasource.url=jdbc:mysql://172.17.0.2:3306/reclamosumg?useSSL=false
+spring.datasource.url=jdbc:mysql://database-205.csxojd7cgpoj.us-east-1.rds.amazonaws.com/reclamosumg?useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=cdag117587
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
